// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellAccountSelectItem - Snapshot should render default settings correctly 1`] = `
<SelectItem
  isSelected={false}
  onPress={[Function]}
  style={Object {}}
  testID="cell-account-single-select"
>
  <CellAccountContent
    accountAddress="0x2990079bcdEe240329a520d2444386FC119da21a"
    accountAvatarType="JazzIcon"
    title="Orangefox.eth"
  />
</SelectItem>
`;

exports[`CellAccountSelectItem - Snapshot should render the proper selected state 1`] = `
<SelectItem
  isSelected={true}
  onPress={[Function]}
  style={Object {}}
  testID="cell-account-single-select"
>
  <CellAccountContent
    accountAddress="0x2990079bcdEe240329a520d2444386FC119da21a"
    accountAvatarType="JazzIcon"
    title="Orangefox.eth"
  />
</SelectItem>
`;
